fix spacing in pc view of purple car and backwards button

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1316,3 +1316,10 @@ body {
         }
     }
 }
+
+// make a pc exclusive adjustment
+@media (min-width: 1024px) and (hover: hover) and (pointer: fine) {
+    .control-container {
+        padding: 18px 20px;
+    }
+}
